--- a/examples/emberjs/todomvc/bower.json
+++ b/examples/emberjs/todomvc/bower.json
@@ -2,6 +2,7 @@
   "name": "todomvc",
   "dependencies": {
     "ember": "~2.10.0",
-    "ember-cli-shims": "0.1.3"
+    "ember-cli-shims": "0.1.3",
+    "Faker": "^4.1.0"
   }
 }
